--- a/style.css
+++ b/style.css
@@ -35,9 +35,10 @@
 /* General styles */
 
 
-html{
+html {
     scroll-behavior: smooth;
 }
+
 body {
     background: var(--clr-light);
     color: var(--clr-dark);
@@ -84,11 +85,13 @@ h3 {
 .section-title-intro strong {
     display: block;
 }
+
 /* Header */
 
 .header {
     display: flex;
     justify-content: space-between;
+    /* align-items: center; */
     padding: 1em;
 }
 
@@ -97,6 +100,10 @@ h3 {
 }
 
 .nav {
+    display: flex;
+    justify-content: space-around;
+    line-height: 3;
+    align-items: center;
     position: fixed;
     background: var(--clr-dark);
     color: var(--clr-light);
@@ -105,16 +112,19 @@ h3 {
     left: 0;
     right: 0;
     z-index: 100;
-    
+
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
 }
 
 .nav-list {
+    /* border: 2px solid firebrick; */
     list-style: none;
     display: flex;
     height: 100%;
+    margin-inline: auto;
     flex-direction: column;
+    width: max-content;
     justify-content: space-evenly;
     align-items: center;
     margin: 0;
@@ -133,7 +143,7 @@ h3 {
 }
 
 .nav-toggle {
-    padding: .5em;
+    /* padding: .5em; */
     background: transparent;
     border: 0;
     cursor: pointer;
@@ -151,12 +161,12 @@ h3 {
     position: fixed;
 }
 
-.nav-open .hamburger{
+.nav-open .hamburger {
     transform: rotate(.625turn);
 }
 
 .nav-open .hamburger::before {
-    transform: rotate(90deg)  translateX(-6px);
+    transform: rotate(90deg) translateX(-6px);
 }
 
 .nav-open .hamburger::after {
@@ -189,8 +199,13 @@ h3 {
     right: 0;
 }
 
-.hamburger::before { top: 6px; }
-.hamburger::after { bottom: 6px; }
+.hamburger::before {
+    top: 6px;
+}
+
+.hamburger::after {
+    bottom: 6px;
+}
 
 /* intro */
 
@@ -398,12 +413,13 @@ h3 {
     overflow: hidden;
 }
 
-.portfolio-img{
-    transition: 
-    transform 750ms cubic-bezier(.5, 0, .5, 1),
-    opacity 250ms linear;
+.portfolio-img {
+    transition:
+        transform 750ms cubic-bezier(.5, 0, .5, 1),
+        opacity 250ms linear;
 }
-.portfolio-img:hover{
+
+.portfolio-img:hover {
     transform: scale(1.2);
     opacity: .5;
     background: var(--clr-accent);
@@ -411,33 +427,38 @@ h3 {
 
 /* footer */
 
-.footer{
+.footer {
     background: #111;
     color: var(--clr-accent);
     text-align: center;
     padding: 2.5em 0;
     font-size: var(--fs-h3);
 }
-.footer a{
+
+.footer a {
     color: inherit
 }
-.footer-link{
+
+.footer-link {
     text-decoration: none;
     color: var(--clr-accent);
     font-weight: var(--fw-bold);
 }
-.footer-link:hover{
+
+.footer-link:hover {
     text-decoration: underline;
 }
-.social-list{
+
+.social-list {
     display: flex;
     justify-content: center;
     /* gap: 1.6rem; */
     padding: 0;
-    margin: 2em 0 ;
+    margin: 2em 0;
     list-style: none;
 }
-.social-item a{
+
+.social-item a {
     list-style: none;
 }
 
@@ -445,6 +466,28 @@ h3 {
 .social-list__link:hover {
     opacity: .7;
 }
-.social-list__link{
+
+.social-list__link {
     margin: 0 .5em;
+}
+
+/* portfolio page */
+
+.portfolio-pages{
+    padding: 0 2em 2em;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+/* .port-page-img {
+    margin-inline: auto;
+    width: 600px;
+    background-repeat: no-repeat;
+    background-size: cover;
+} */
+
+.portfolio-text {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
