--- a/style.css
+++ b/style.css
@@ -90,13 +90,14 @@ h3 {
 
 .header {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     /* align-items: center; */
-    padding: 1em;
+    padding: 0.9em;
 }
 
 .logo {
-    max-width: 100px;
+    padding: 0.2rem;
+    max-width: 8.75rem;
 }
 
 .nav {
@@ -118,14 +119,12 @@ h3 {
 }
 
 .nav-list {
-    /* border: 2px solid firebrick; */
     list-style: none;
     display: flex;
     height: 100%;
-    margin-inline: auto;
-    flex-direction: column;
-    width: max-content;
-    justify-content: space-evenly;
+    /* flex-direction: column; */
+    /* width: max-content; */
+    /* justify-content: space-evenly; */
     align-items: center;
     margin: 0;
     padding: 0;
@@ -143,12 +142,12 @@ h3 {
 }
 
 .nav-toggle {
-    /* padding: .5em; */
+    padding: .5em;
     background: transparent;
     border: 0;
     cursor: pointer;
     position: absolute;
-    right: 1em;
+    right: 2em;
     top: 1em;
     z-index: 1000;
 }
@@ -200,23 +199,25 @@ h3 {
 }
 
 .hamburger::before {
-    top: 6px;
+    top: 7px;
 }
 
 .hamburger::after {
-    bottom: 6px;
+    bottom: 7px;
 }
 
 /* intro */
 
 .intro-title {
+    text-align: center;
     margin-bottom: .25rem;
     font-weight: var(--fw-reg);
 }
 
 .intro-subtitle {
     margin: 0;
-    font-size: var(--fs-h3);
+    font-size: 24px;
+    text-align: center;
 }
 
 
@@ -228,10 +229,6 @@ h3 {
     margin-bottom: 1em;
 }
 
-.intro {
-    position: relative;
-}
-
 .intro-img {
     max-height: 100%;
     /* height: 313px; */
@@ -239,15 +236,19 @@ h3 {
 
 /* introduction  section*/
 .intro {
+    position: relative;
     padding: 2rem;
 }
 
 .intro-img {
-    width: 100%;
+    margin-inline: auto;
+    width: 80%;
+    box-shadow: 0 0.5rem 2.8rem -0.8rem;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 900px) {
     .intro {
+        padding: 8rem 0;
         display: grid;
         width: min-content;
         margin: 0 auto;
@@ -257,12 +258,19 @@ h3 {
             "img subtitle";
         grid-template-columns: min-content max-content;
     }
+    .intro-title {
+        text-align: start;
+    }
+    .intro-subtitle {
+        font-size: 37px;
+        text-align: end;
+    }
 
     .intro-img {
         grid-area: img;
         min-width: 250px;
-        /* position: relative;
-        z-index: 2; */
+        position: relative;
+        z-index: 2;
     }
 
     /* .intro-title{
@@ -272,7 +280,6 @@ h3 {
         align-self: start;
         grid-column: -1 / 1;
         grid-row: 2;
-        text-align: right;
         position: relative;
         left: -1.5em;
         width: calc(100% + 1.5em);
@@ -348,15 +355,19 @@ h3 {
 /* About me section */
 
 .about-me {
-    /* display: flex;
-    flex-direction: column; */
+    display: flex;
+    flex-direction: column;
     max-width: 1100px;
     margin: 0 auto;
 }
 
 .about-img {
-    width: 100%;
+    width: 90%;
+    margin-inline: auto;
     box-shadow: 0 0 0.4;
+}
+.about-title {
+    text-align: center;
 }
 
 @media (min-width: 800px) {
@@ -393,19 +404,20 @@ h3 {
 /* my work */
 
 .my-work {
+    padding: 64px 40px;
     background-color: var(--clr-dark);
     color: var(--clr-light);
     text-align: center;
 }
 
 .my-work p {
+    font-size: 24px;
     color: var(--clr-accent);
     font-weight: var(--fw-bold);
 }
 
 .portfolio {
     display: grid;
-    gap: 4px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
@@ -424,11 +436,16 @@ h3 {
     opacity: .5;
     background: var(--clr-accent);
 }
+@media (min-width: 900px) {
+   .my-work{
+   padding: 128px 90px;
+   }
+}
 
 /* footer */
 
 .footer {
-    background: #111;
+    background: rgba(20, 20, 20, 1);
     color: var(--clr-accent);
     text-align: center;
     padding: 2.5em 0;
@@ -452,9 +469,9 @@ h3 {
 .social-list {
     display: flex;
     justify-content: center;
-    /* gap: 1.6rem; */
+    gap: 1.6rem;
     padding: 0;
-    margin: 2em 0;
+    margin: 1em 0;
     list-style: none;
 }
 
